users can now view the groups they belong to, and will be redirected if they do not belong to that group

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@ You belong to these groups
     <% UsersGroup.all.each do |mb| %>
         <% if mb.user_id == @current_user.id && mb.group_id == g.id %>
           <li>
-            <%= g.name %>
+              <%= link_to g.name, g %>
           </li>
         <% end %>
     <% end %>
