--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,16 @@
     <li>
       <%= link_to "Create Group", new_group_path %>
     </li>
+    <li>
+      <%= link_to "Join Group", new_users_group_path %>
+    </li>
     <p>Welcome <a><%= @current_user.name%> </a></p>
           <%= link_to "log out", logout_path, :method => :delete %>
 
     <% else %>
 <li>
 <%= link_to "Log In", login_path %>
+<%= link_to "Sign Up", new_user_path %>
 </li>
 
     <% end %>
