--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -9,3 +9,13 @@ Create A Group!
 
 <%= f.submit "Make Group" %>
 <% end %>
+
+<% Groups.all.each do |g| %>
+    <% UsersGroup.all.each do |mb| %>
+        <% if mb.user_id == @current_user.id && mb.group_id == g.id %>
+          <li>
+              <%= link_to g.name, g %>
+          </li>
+        <% end %>
+    <% end %>
+<% end %>
