--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,7 +11,7 @@ Join Code:  <%= @group.join_code %>
 
 <% @images.reverse.each do |i| %>
 <li>
-<img src = <%=i.image.url%>> </br>
+   <%= link_to "View Image", i %><img src = <%=i.image.url%>> </br>
 Uploaded on: <%=  i.created_at %> by <%= User.find(i.user_id).name %>
 </br>
 
