--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,16 +4,29 @@ Hello!
 <% if @current_user.present? %>
 <p>
 You belong to these groups
-<% @groups.each do |g| %>
-    <% UsersGroup.all.each do |mb| %>
-        <% if mb.user_id == @current_user.id && mb.group_id == g.id %>
-          <li>
-              <%= link_to g.name, g %>
-          </li>
-        <% end %>
-    <% end %>
+<% @groups_belong_to.each do |g| %>
+  <li>
+      <%= link_to g.name, g %>
+  </li>
 <% end %>
+
+
+
+
+<% @images.reverse.each do |i| %>
+<li>
+   <%= link_to "View Image", i %><img src = <%=i.image.url%>> </br>
+ <b><%=  time_ago_in_words(i.created_at) %></b> ago by <b><%= User.find(i.user_id).name %></b> to <%= link_to i.group.name, i.group %>, <%= i.comments.length %> Comments
+</br>
+<p>
+<%= i.caption %>
 </p>
+
+<hr>
+</li>
+<% end %>
+
+
 <% end %>
 
 
