--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>MEMEPROJECT</title>
+
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,7 +16,55 @@
     <% end %>
 
 
-<nav>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">MemeGround</a>
+        </div>
+        <ul class="nav navbar-nav nav-tabs navbar-right">
+
+
+                  <% if @current_user.present? %>
+                  <li>
+                    <%= link_to "Upload Image", new_image_path %>
+                  </li>
+
+
+
+                          <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Groups <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                              <li><%= link_to "Create Group", new_group_path %></li>
+                              <li><%= link_to "Join Group", new_users_group_path %></li>
+                              <li role="separator" class="divider"> </li>
+                              <% @groups_belong_to.each do |g| %>
+                                <li>
+                                    <%= link_to g.name, g %>
+                                </li>
+                              <% end %>
+                            </ul>
+                          </li>
+
+                  <li>
+                      <%= link_to "Log Out", logout_path, :method => :delete %>
+                  </li>
+                  <% else %>
+              <li>
+              <%= link_to "Log In", login_path %>
+            </li>
+            <li>
+              <%= link_to "Sign Up", new_user_path %>
+              </li>
+
+                  <% end %>
+
+
+        </ul>
+      </div>
+    </nav>
+
+
+<!-- <nav>
   <ul>
     <% if @current_user.present? %>
     <li>
@@ -38,7 +87,7 @@
 
     <% end %>
   </ul>
-</nav>
+</nav> -->
 
 
 
