--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
 
                           <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Groups <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Groups <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                               <li><%= link_to "Create Group", new_group_path %></li>
                               <li><%= link_to "Join Group", new_users_group_path %></li>
