--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,11 @@
 
 <% if @current_user.present? %>
 
-
-
+  <% if @groups_belong_to.length == 0 %>
+    <h2>You arent in any groups!</h2>
+    <li><%= link_to "Create Group", new_group_path %></li>
+    <li><%= link_to "Join Group", new_users_group_path %></li>
+  <% end %>
 
   <% @images.reverse.each do |i| %>
   <li>
@@ -19,7 +22,21 @@
   </li>
   <% end %>
 
+  <% else %>
 
+  <%= form_tag login_path do %>
+    <p>
+      <%= label_tag :email %>
+      <%= email_field_tag :email %>
+    </p>
+
+    <p>
+      <%= label_tag :password %>
+      <%= password_field_tag :password %>
+    </p>
+
+    <%= submit_tag "Login" %>
+  <% end %>
 <% end %>
 
 
