--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,19 +4,25 @@
 <% if @current_user.present? %>
 
   <% if @groups_belong_to.length == 0 %>
-    <h2>You arent in any groups!</h2>
+    <h1>Welcome to MemeGround!</h1>
+    <h2>To get started, create or join an existing group.</h2>
     <li><%= link_to "Create Group", new_group_path %></li>
     <li><%= link_to "Join Group", new_users_group_path %></li>
   <% end %>
 
+  <% if @images.length == 0 %>
+      <h3>Now, <%= link_to "Upload an Image", new_image_path %> to your group!</h3>
+  <% end %>
+
   <% @images.reverse.each do |i| %>
   <li>
-     <%= link_to "View Image", i %><img src = <%=i.image.url%>> </br>
-   <b><%=  time_ago_in_words(i.created_at) %></b> ago by <b><%= User.find(i.user_id).name %></b> to <%= link_to i.group.name, i.group %>, <%= i.comments.length %> Comments
+  <%= link_to image_tag(i.image.url), i %> </br>
+    <p>
+    <%= i.caption %>
+    </p>
+   <b><%=  time_ago_in_words(i.created_at) %></b> ago by <b><%= User.find(i.user_id).name %></b> to <%= link_to i.group.name, i.group %>, <%= i.comments.length %> Comments,  <%= link_to "View Image", i %>
   </br>
-  <p>
-  <%= i.caption %>
-  </p>
+
 
   <hr>
   </li>
