--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,5 +31,5 @@
 <%= f.password_field :password_confirmation, :required => true %>
 </p>
 
-<%= f.submit "Sign ups" %>
+<%= f.submit "Submit" %>
 <% end %>
