--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -37,11 +37,11 @@ Join Code:  <%= @group.join_code %>
 
 <% @images.reverse.each do |i| %>
 <p>
-   
+
    <%= link_to image_tag(i.image.url), i %>
 
    <p>
-   <%= i.caption %>
+   <h4><%= i.caption %> </h4>
    </p>
  <b><%=  time_ago_in_words(i.created_at) %></b> ago by <b><%= User.find(i.user_id).name %></b>, <%= i.comments.length %> Comments
  <%= link_to "View Image", i %>
