--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,8 +1,10 @@
 <%= form_for @image do |f| %>
+
   <p>
-  <%= f.label :image %>
-  <%= f.file_field :image, :required => true %>
+  
+<div style = "margin-left: 43vw; width: 100%;">  <%= f.file_field :image, :required => true %></div>
 </p>
+
 
 <p>
 <%= f.label :Caption %> (optional)
