--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,5 +24,23 @@
 
 img {
   max-width: 90vw;
-  max-height: 90vh;
+  max-height: 80vh;
+}
+
+.comment {
+  padding-bottom: 3px;
+text-align: left;
+ margin: auto;
+}
+
+.comment-info {
+  float: right;
+   padding-right: 20%;
+
+}
+
+.comment-text {
+  padding-left: 20vw;
+  font-size: 20px;
+
 }
